Adding new topics.

--- a/presentation.html
+++ b/presentation.html
@@ -77,7 +77,15 @@ class: center, middle
 
 ---
 
-# Indo Além
+## Indo Além
+
+### Projetos e literatura
+
+---
+
+## Indo Além
+
+### Dicas que eu dou para quem for procurar estágio
 
 - 
 
